auth : add register
